--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -35,7 +35,7 @@ BM: Word embeddings have been used as evidence in studies of historical change i
 
 LW:  Word embeddings have also been used to track demographic and occupational shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They used word embeddings from different sources after 1900, including Google News, Google Books, and the Corpus of Historical American English using the word2vec algorithm and New York Times using the GloVe algorithm. They extracted word embeddings for sets of words representing gender (e.g. he, man, boy, etc.) and ethnicity (e.g. last names such as Li, Wong, Kim), and a set of neutral words, such as adjectives and job titles, serving as indicators for stereotypes and attitudes. They compared the association of word vectors between each set words (gender and ethnic minorities) and neutral words, where the strength of association is calculated by computing average embedding distance. Their results show that jobs such as nurses, dancers, housekeepers have been biased toward women and there is an increase in adjectives for describing women's competence, such as intelligent, after the women’s movement in the 1960s-1970s, with higher participation rates in jobs. Another bias is the jobs of Asian-Americans which were associated with academic positions, reflecting the stereotype of the model minority, and their adjectives shift from negative words describing outsiders before 1950 to stereotype words about personality traits after 1950, with the growth of the Asian-American population. This study demonstrates a successful use of word embeddings to detect semantic change over time that reveal social biases that correspond to broader sociocultural contexts.
 
-LW: Another example shows how word embeddings are effective for identifying semantic changes in shared understandings of US social classes in the 20th century. @Kozlowski used the word2vec algorithm to generate word embeddings from millions of books published between 1900 and 2012 that are available in the Google Ngrams corpus. They first constructed cultural dimensions of class that commonly discussed in sociological theory from word embeddings, including affluence, occupation, education, states, and cultivated taste. They then projected word embeddings that consist of sets of antonym pairs on a project for each cultural dimension as new dimensions to see their relationships. For instance, dimensions of rich-poor, priceless-worthless, and prosperous-bankrupt were projected on to the affluence dimension. The most interesting result is that 'employment', the occupation dimension, shows substantial semantic changes. For example, titles of formal office, such as 'lords' and 'governor', change to 'promoter' and 'mogul', which are positions of economic status with power. Similarly, 'employee', another occupation dimension, shifts from an association with words like 'wage' and 'earners' in the early 20th century, and 'soldier' during World War I, to 'retirement' and 'qualified' in the end of the century. This reflects the emergence of a middle-class in the US. They also found a close relationship between word pairs across different cultural dimensions, including education, morality, and cultivated taste, over time despite there is a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends by exploring social classes.
+LW: Another example shows how word embeddings are effective for identifying semantic changes in shared understandings of US social classes in the 20th century. @Kozlowski used the word2vec algorithm to generate word embeddings from millions of books published between 1900 and 2012 that are available in the Google Ngrams corpus. They first constructed cultural dimensions of class that commonly discussed in sociological theory from word embeddings, including affluence, occupation, education, states, and cultivated taste. They then projected word embeddings that consist of sets of antonym pairs on a project for each cultural dimension as new dimensions to see their relationships. For instance, dimensions of rich-poor, priceless-worthless, and prosperous-bankrupt were projected on to the affluence dimension. The most interesting result is that 'employment', the occupation dimension, shows substantial semantic changes. For example, titles of formal office, such as 'lords' and 'governor', change to 'promoter' and 'mogul', which are positions of economic status with power. Similarly, 'employee', another occupation dimension, shifts from an association with words like 'wage' and 'earners' in the early 20th century, and 'soldier' during World War I, to 'retirement' and 'qualified' in the end of the century. This reflects the emergence of a middle-class in the US. They also found a stable, close relationship between word pairs across different cultural dimensions, including education, morality, and cultivated taste, over time despite there being a major shift in the condition of economy, industry, and employment in the present day. This case study indicates word embeddings is a robust method for examining historical trends of semantic meaning for social class.
 
 # Methods
 
@@ -71,9 +71,9 @@ LW: We transformed the cleaned text into a document-feature matrix. This is a re
 
 LW: We generated the word embedding on the co-occurrence matrix using the GloVe algorithm from the text2vec package for R [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is an unsupervised learning algorithm that creates word vectors to represent semantic regularities and capture relationships between words [@Pennington2014]. The general idea is that the multiplied value of the final word vectors for any two words will be equivalent to the logarithm of those words' probability of co-occurrence. To achieve this, GloVe performs a weighted least squares regression for every word continuously along the text to generate vector values by maximizing the probability of a surrounding word with the occurrence of a center word. GloVe generates two sets of word vectors for each word (i.e. for the word as a center word or a surrounding word), and final word vector is the sum of these two sets of values. 
 
-BM: One of the key practical challenges of studying temporal change in word embeddings is aligning the vectors representing the same words across multiple time periods. This is because the stochastic nature of word embeddings algorithms makes them generate representations that always have different coordinate systems and thus one set of embeddings are are not directly comparable to another set generated on a different corpus (i.e. from a different time period). Previous work generally follows a two-step pattern: first compute word embeddings in each time slice separately, then find a way to align the word embeddings across time slices. @kim2014temporal generated word embeddings for each time period by initializing them with the embeddings from the previous period. @kulkarni2015statistically compute a linear transformation of words between any two time slices by solving a n-dimensional least squares problem of k nearest neighbor words (where n is the embedding dimension). @zhang2016past similarly use a linear transformation between a base and target time slices, and compute the linear transformation using anchor words that does not change meaning between the two time slices (requiring prior knowledge of words that are static). @hamilton2016diachronic solves a n-dimensional Procrustes problem between every two adjacent time slices to perform the alignment. These alignment procedures are complex, and @dubossarsky2017outta show that they suffer from biases and produce spurious results. @dubossarsky2019time show that an alternative method, temporal referencing, avoids these concerns about previous alignment methods using a radically simpler procedure. Temporal referencing combines all time-specific corpora into one corpus, and generates word embeddings on this full corpus. Before generating the embeddings, they first replace each instance of the target word with a time-specific token. For example, the word 'theory' is replaced by the time-specific token 'theory (1970-1980)' in the meeting abstracts from the years 1970-1980, and 'theory (1980-1990)' in the meeting abstracts from the years 1980-1990, and so on for each time slice. Then a single space is generated that contains a vector for each time-specific token, and the coordinates of the background, or context, words remain the same for each time slice, with no need for alignment. Besides the advantage of avoiding alignment, this temporal referencing method lowers data requirements (because context words are collapsed, and thus shared across time slices) and is suitable for smaller corpora, producing smooth change values without millions of words. A key assumption of this approach, as with the alignment methods, is that the semantics of the context words stay relatively stable over time.
+BM: One of the key practical challenges of studying temporal change in word embeddings is aligning the vectors representing the same words across multiple time periods. This is because the stochastic nature of word embeddings algorithms makes them generate representations that always have different coordinate systems and thus one set of embeddings are not directly comparable to another set generated on a different corpus (i.e. from a different time period). Previous work generally follows a two-step pattern: first compute word embeddings in each time slice separately, then find a way to align the word embeddings across time slices. @kim2014temporal generated word embeddings for each time period by initializing them with the embeddings from the previous period. @kulkarni2015statistically compute a linear transformation of words between any two time slices by solving a n-dimensional least squares problem of k nearest neighbor words (where n is the embedding dimension). @zhang2016past similarly use a linear transformation between a base and target time slices, and compute the linear transformation using anchor words that does not change meaning between the two time slices (requiring prior knowledge of words that are static). @hamilton2016diachronic solves a n-dimensional Procrustes problem between every two adjacent time slices to perform the alignment. These alignment procedures are complex, and @dubossarsky2017outta show that they suffer from biases and produce spurious results. @dubossarsky2019time show that an alternative method, temporal referencing, avoids these concerns about previous alignment methods using a radically simpler procedure. Temporal referencing combines all time-specific corpora into one corpus, and generates word embeddings on this full corpus. Before generating the embeddings, they first replace each instance of the target word with a time-specific token. For example, the word 'theory' is replaced by the time-specific token 'theory (1970-1980)' in the meeting abstracts from the years 1970-1980, and 'theory (1980-1990)' in the meeting abstracts from the years 1980-1990, and so on for each time slice. Then a single space is generated that contains a vector for each time-specific token, and the coordinates of the background, or context, words remain the same for each time slice, with no need for alignment. Besides the advantage of avoiding alignment, this temporal referencing method lowers data requirements (because context words are collapsed, and thus shared across time slices) and is suitable for smaller corpora, producing smooth change values without millions of words. A key assumption of this approach, as with the alignment methods, is that the semantics of the context words stay relatively stable over time.
 
-BM: Once the embeddings had been generated, we visualized the word vector values to explore the historical trends of word meanings in archaeology. We first subset the corpus to identify the words that are semantically similar to our target word using the cosine distance measure on pairs of word vectors. These similar words become the context words that map the semantic space that our target word moves through over time. Then we used the t-Distributed Stochastic Neighbor Embedding (t-SNE) method [@maaten2008visualizing] for constructing a two dimensional embedding of the word vectors to reduce the high dimensionality of the word vectors so they can projected on a scatter plot. t-SNE is a visualisation method that retaining the local structure of the data while also revealing some important global structure (such as clusters). This is useful for placing similar words close together on the plot, while maximizing the distance between dissimilar words. While t-SNE is highly flexible, and can often find structure where other dimensionality-reduction algorithms, such as PCA, cannot [@balamurali2016t], it can produce plots that are difficult to interpret, and some elements can be highly senstive to different hyperparameter settings, for example the size of the clusters and inter-cluster distances [@wattenberg2016how]. A key limitation is that because t-SNE is non-linear (compared to PCA which is a linear transformation) and adapts to the underlying data, performing different transformations on different regions of the data, t-SNE plots are not easily interpretable in terms of the axes/units of the original, high-dimensional data.  
+BM: Once the embeddings had been generated, we visualized the word vector values to explore the historical trends of word meanings in archaeology. We first subset the corpus to identify the words that are semantically similar to our target word using the cosine distance measure on pairs of word vectors. These similar words become the context words that map the semantic space that our target word moves through over time. Then we used the t-Distributed Stochastic Neighbor Embedding (t-SNE) method [@maaten2008visualizing] for constructing a two dimensional embedding of the word vectors to reduce the high dimensionality of the word vectors so they can be projected on a scatter plot. t-SNE is a visualisation method that retaining the local structure of the data while also revealing some important global structure (such as clusters). This is useful for placing similar words close together on the plot, while maximizing the distance between dissimilar words. While t-SNE is highly flexible, and can often find structure where other dimensionality-reduction algorithms, such as PCA, cannot [@balamurali2016t], it can produce plots that are difficult to interpret, and some elements can be highly sensitive to different hyperparameter settings, for example the size of the clusters and inter-cluster distances [@wattenberg2016how]. A key limitation is that because t-SNE is non-linear (compared to PCA which is a linear transformation) and adapts to the underlying data, performing different transformations on different regions of the data, t-SNE plots are not easily interpretable in terms of the axes/units of the original, high-dimensional data.  
 
 
 
@@ -98,7 +98,8 @@ source(here::here("code/006-testing-word-2-vec-temporal-referencing-by-period.R"
 
 LW: Figure XX shows that there is an increase in the abstract counts over time that can be divided into two groups, a group of an early time from 1962 to 1994 with abstracts less than 1,000 per year, and a group of a later time from 2004 to 2020 with abstracts more than 1,500 per year. We observed the highest abstract counts (`r prettyNum(high_abs, big.mark = ",")`) in 2015, followed by 2017, 2019, 2018, and 2014 with more than 4,000 attracts, but a drop in 2020 with around 3,000 abstracts. The total number of word counts per year shows a similar pattern of growth over time that corresponds to the trend of the abstract counts. This suggests that the more abstract counts, the more word counts per year that matches our expectation for the data. 
 
-LW: We compared the word frequencies between two time periods, before 2004 and after 2004, to explore the general change of the usage of words in archaeology over time. We observed (Figure XX) an interesting pattern that shows a considerable high proportion of words used less often compared to words used more often after 2004, despite the word count is much higher in the later time. That is, archaeologists in more recent years have a smaller range of word choices and tend to not use some words, such as prehistoric, data, site, settlement, and patterns, used frequently in the past. In contrast, the words such as landscape, ancient, social, practices, and understanding become common after 2004. It could reflect an extinction of a large group of words during the course of the development of archaeology. One reason may be researchers have a more common idea about the selection of words when the community becomes bigger and more international. This leads to the use of a smaller group of words that present the sharing understanding about archaeology instead of the use of large group of obscure words demonstrate one's knowledge. 
+LW: We compared the word frequencies between two time periods, before 2004 and after 2004, to explore the general change of the usage of words in archaeology over time. We observed (Figure XX) an interesting pattern that shows a considerably high proportion of words used less often compared to words used more often after 2004, despite the word count being much higher in the later time. That is, archaeologists in more recent years have a smaller range of word choices and tend to not use some words, such as prehistoric, data, site, settlement, and patterns, used frequently in the past. In contrast, words such as landscape, ancient, social, practices, and understanding became common after 2004. It could reflect an extinction of a large group of words during the course of the development of archaeology. One reason may be researchers have a more common idea about the selection of words when the community becomes bigger and more international. This leads to the use of a smaller group of words that present the sharing understanding about archaeology instead of the use of a large group of obscure words that demonstrate one's knowledge.
+
 
 -- word frequency time series
 - TR plots
